--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
     "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.1.73",
     "require": "^2.4.20",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
