--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.7.23",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -26,6 +27,8 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
     "webpack-cli": "^4.10.0"
   }
 }
