--- a/src/server/Model.Test/Model.Test.csproj
+++ b/src/server/Model.Test/Model.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\Emmoji.Model\Emmoji.Model.csproj" />
   </ItemGroup>
 
 </Project>
