--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "file-loader": "^6.2.0",
+    "@microsoft/signalr": "^6.0.9",
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
     "phaser": "^3.55.2",
